<resources>
    <string name="app_name">ZhongHao_CE02</string>
    <string name="buttonTitle_add">Add</string>
    <string name="buttonTitle_settings">Settings</string>
    <string name="buttonTitle_save">Save</string>
    <string name="editText_firstName_hint">First Name</string>
    <string name="editText_lastName_hint">Last Name</string>
    <string name="editTextNumber_hint">Employee ID</string>
    <string name="editText_status_hint">Employee Status</string>
    <string name="textView_date_defaultText">Select a Date</string>
    <string name="textView_label_text">Hire Date</string>
    <string name="button_text">Select Date</string>
    <string name="buttonTitle_edit">Edit</string>
    <string name="buttonTitle_delete">Delete</string>
    <string name="textView_warning_text">No Employees Available</string>
    <string-array name="spinner_sortingMethod">
        <item>Sort by Status</item>
        <item>Sort by ID</item>
    </string-array>
    <string-array name="spinner_sortingOrder">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string name="default_dateFormat">MM/dd/yyyy</string>
    <string name="intentAction_add">Add</string>
    <string name="intentAction_edit">Edit</string>
    <string name="warning_empty">Please do not leave any field blank!</string>
    <string name="warning_num">Please enter a positive integer.</string>
    <string name="warning_delete">Sure you want to delete?</string>
    <string name="confirmation_deleted">Employee(s) deleted</string>
    <string-array name="entries_list_preference">
        <item>10/31/2021</item>
        <item>Oct 31, 2021</item>
        <item>10.31.2021</item>
    </string-array>
    <string-array name="entryvalues_list_preference">
        <item>MM/dd/yyyy</item>
        <item>MMM dd, yyyy</item>
        <item>MM.dd.yyyy</item>
    </string-array>
</resources>